experimental/ir/testdata/editions/lifetime.proto.stderr.txt
warning: `b` is deprecated in Edition 2023
  --> testdata/editions/lifetime.proto:9:33
   |
 3 | edition = "2023";
   |           ------ edition specified here
...
 9 | option features.(x) = {a: true, b: true, c: true, d: true, e: true, f: true};
   |                                 ^
   = help: deprecated since Edition 2023
   = help: this is a bad feature; don't use it

error: `c` is not supported in Edition 2023
  --> testdata/editions/lifetime.proto:9:42
   |
 3 | edition = "2023";
   |           ------ edition specified here
...
 9 | option features.(x) = {a: true, b: true, c: true, d: true, e: true, f: true};
   |                                          ^
   = help: removed in Edition 2023

error: `d` is not supported in Edition 2023
  --> testdata/editions/lifetime.proto:9:51
   |
 3 | edition = "2023";
   |           ------ edition specified here
...
 9 | option features.(x) = {a: true, b: true, c: true, d: true, e: true, f: true};
   |                                                   ^
   = help: `d` requires at least Edition 2024

warning: `e` is deprecated in Edition 2023
  --> testdata/editions/lifetime.proto:9:60
   |
 3 | edition = "2023";
   |           ------ edition specified here
...
 9 | option features.(x) = {a: true, b: true, c: true, d: true, e: true, f: true};
   |                                                            ^
   = help: deprecated since Edition 2023, to be removed in Edition 2024

error: `f` is not supported in Edition 2023
  --> testdata/editions/lifetime.proto:9:69
   |
 3 | edition = "2023";
   |           ------ edition specified here
...
 9 | option features.(x) = {a: true, b: true, c: true, d: true, e: true, f: true};
   |                                                                     ^
   = help: deprecated since "proto3", removed in Edition 2023

encountered 3 errors and 2 warnings
